# doc-search

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  ripgrep-integration-research.md  ui-mockup.md
src/doc_search/: __init__.py  cli.py
src/doc_search/core/: __init__.py  errors.py  ripgrep_wrapper.py  semantic_search.py
src/doc_search/ui/: __init__.py  search_integration.py  tui_main.py
tests/: test_basic.py
